회원가입 email verify 추가 로그인시 uid Toast출력 제거 회원가입 activity_signup.xml 파일 버튼 추가

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#A1A1A1">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="0dp"
-        android:layout_height="580dp"
+        android:layout_width="381dp"
+        android:layout_height="626dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/rounded_corner"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -29,15 +34,16 @@
             android:backgroundTintMode="src_in"
             android:insetTop="0dp"
             android:insetBottom="0dp"
+            android:onClick="onButtonClick"
             android:text="회원가입"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:onClick="onButtonClick"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextNickname" />
+            app:layout_constraintTop_toBottomOf="@+id/verificationEmail" />
 
         <EditText
             android:id="@+id/editTextID"
@@ -77,7 +83,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="38dp"
+            android:layout_marginTop="36dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/rounded_corner_textinput"
             android:hint="비밀번호"
@@ -159,6 +165,195 @@
             app:layout_constraintBottom_toTopOf="@+id/editTextID"
             app:layout_constraintEnd_toEndOf="@+id/editTextID" />
 
+        <Button
+            android:id="@+id/verificationEmail"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="44dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/rounded_corner_button"
+            android:backgroundTint="#1CB5C0"
+            android:backgroundTintMode="src_in"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:onClick="onButtonClick"
+            android:text="확인 메일 전송"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextNickname" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    android:background="#A1A1A1">-->
+
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="580dp"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginTop="64dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:background="@drawable/rounded_corner"-->
+<!--        android:orientation="vertical"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
+
+<!--        <androidx.appcompat.widget.AppCompatButton-->
+<!--            android:id="@+id/buttonSignup"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:background="@drawable/rounded_corner_button"-->
+<!--            android:backgroundTint="#1CB5C0"-->
+<!--            android:backgroundTintMode="src_in"-->
+<!--            android:insetTop="0dp"-->
+<!--            android:insetBottom="0dp"-->
+<!--            android:text="회원가입"-->
+<!--            android:textColor="#FFFFFF"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:onClick="onButtonClick"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/editTextNickname" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/editTextID"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginTop="32dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:background="@drawable/rounded_corner_textinput"-->
+<!--            android:hint="이메일"-->
+<!--            android:inputType="text"-->
+<!--            android:padding="18dp"-->
+<!--            android:textSize="16sp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/textViewSignup" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/editTextNickname"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginTop="38dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:background="@drawable/rounded_corner_textinput"-->
+<!--            android:hint="닉네임"-->
+<!--            android:inputType="text"-->
+<!--            android:padding="18dp"-->
+<!--            android:textSize="16sp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="1.0"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/editTextPassword"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginTop="38dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:background="@drawable/rounded_corner_textinput"-->
+<!--            android:hint="비밀번호"-->
+<!--            android:inputType="textPassword"-->
+<!--            android:padding="18dp"-->
+<!--            android:textSize="16sp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.0"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/editTextID" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/editTextPassword2"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:background="@drawable/rounded_corner_textinput"-->
+<!--            android:hint="비밀번호 확인"-->
+<!--            android:inputType="textPassword"-->
+<!--            android:padding="18dp"-->
+<!--            android:textSize="16sp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.0"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textViewSignup"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="34dp"-->
+<!--            android:text="회원가입"-->
+<!--            android:textColor="#000000"-->
+<!--            android:textSize="48sp"-->
+<!--            android:textStyle="bold"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textViewIDError"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:text="아이디가 중복됩니다!"-->
+<!--            android:textColor="#F44336"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/editTextID"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/editTextID" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textViewNicknameError"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:text="닉네임이 중복됩니다!"-->
+<!--            android:textColor="#F44336"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/editTextNickname"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/editTextNickname" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textViewPassError"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:text="비밀번호가 일치하지 않습니다!"-->
+<!--            android:textColor="#F44336"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/editTextPassword2"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/SaveError"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginBottom="8dp"-->
+<!--            android:text="등록실패"-->
+<!--            android:textColor="#F44336"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/editTextID"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/editTextID" />-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+
