--- a/app/src/main/res/layout/activity_quiz_list.xml
+++ b/app/src/main/res/layout/activity_quiz_list.xml
@@ -8,150 +8,21 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/quiz_list_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/textViewLoading"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:background="@drawable/textbox"
-            android:layout_marginTop="20dp">
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="50dp"
+            android:gravity="center"
+            android:text="로딩중..."
+            android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/quiz_list01"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="10dp"
-                android:text="내 퀴즈#1"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-
-            <Button
-                android:id="@+id/button_edit01"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:onClick="onEditClick"
-                android:background="@drawable/textbox"
-                android:backgroundTint="#FF1CC079"
-                android:text="Edit"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:background="@drawable/textbox"
-            android:layout_marginTop="20dp">
-
-            <TextView
-                android:id="@+id/quiz_list02"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="10dp"
-                android:text="내 퀴즈#2"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-
-            <Button
-                android:id="@+id/button_edit02"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:onClick="onEditClick"
-                android:background="@drawable/textbox"
-                android:backgroundTint="#FF1CC079"
-                android:text="Edit"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:background="@drawable/textbox"
-            android:layout_marginTop="20dp">
-
-            <TextView
-                android:id="@+id/quiz_list03"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="10dp"
-                android:text="내 퀴즈#3"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-
-            <Button
-                android:id="@+id/button_edit03"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:onClick="onEditClick"
-                android:background="@drawable/textbox"
-                android:backgroundTint="#FF1CC079"
-                android:text="Edit"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:background="@drawable/textbox"
-            android:layout_marginTop="20dp">
-
-            <TextView
-                android:id="@+id/quiz_list04"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="10dp"
-                android:text="내 퀴즈#4"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-
-            <Button
-                android:id="@+id/button_edit04"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:onClick="onEditClick"
-                android:background="@drawable/textbox"
-                android:backgroundTint="#FF1CC079"
-                android:text="Edit"/>
-
-        </LinearLayout>
     </LinearLayout>
 </ScrollView>
