--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -10,6 +10,11 @@
         <item>영어</item>
         <item>우리말</item>
     </string-array>
+    <string-array name="type">
+        <item>4지선다</item>
+        <item>단답형</item>
+        <item>OX형</item>
+    </string-array>
     <string-array name="orderBy">
         <item>조회순</item>
         <item>최신순</item>
