--- a/app/src/main/res/layout/quiz_list_form.xml
+++ b/app/src/main/res/layout/quiz_list_form.xml
@@ -30,7 +30,7 @@
         android:layout_gravity="right"
         android:background="@drawable/textbox"
         android:backgroundTint="#FF1CC079"
-        android:onClick="onEditClick"
+        android:onClick="onButtonClick"
         android:text="Edit" />
 
 
