--- a/app/src/main/res/layout/quiz_ox_form.xml
+++ b/app/src/main/res/layout/quiz_ox_form.xml
@@ -65,6 +65,18 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/quiz_wrong"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="5dp"
+        android:text="오답"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
