--- a/app/src/main/res/layout/activity_solvequiz.xml
+++ b/app/src/main/res/layout/activity_solvequiz.xml
@@ -49,7 +49,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/button_style_main"
-                android:text="퀴즈1답안1"
+                android:text="답안1"
                 android:textAlignment="viewStart"
                 android:textColor="#000000"
                 android:textSize="16sp"
@@ -68,7 +68,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/button_style_main"
-                android:text="퀴즈1답안2"
+                android:text="답안2"
                 android:textAlignment="viewStart"
                 android:textColor="#000000"
                 android:textSize="16sp"
@@ -88,7 +88,7 @@
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/button_style_main"
                 android:backgroundTint="#EFEAEA"
-                android:text="퀴즈1답안3"
+                android:text="답안3"
                 android:textAlignment="viewStart"
                 android:textColor="#000000"
                 android:textSize="16sp"
@@ -107,7 +107,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="30dp"
                 android:background="@drawable/button_style_main"
-                android:text="퀴즈1답안4"
+                android:text="답안4"
                 android:textAlignment="viewStart"
                 android:textColor="#000000"
                 android:textSize="16sp"
@@ -155,7 +155,7 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="40dp"
-                android:text="퀴즈1문제"
+                android:text="문제"
                 android:textColor="#000000"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -163,24 +163,6 @@
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <Button
-            android:id="@+id/report"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="40dp"
-            android:background="@drawable/button_style_report"
-            android:onClick="onClick"
-            android:text="신고"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:backgroundTint="@null"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
