--- a/app/src/main/res/layout/activity_solvequiz_short.xml
+++ b/app/src/main/res/layout/activity_solvequiz_short.xml
@@ -47,7 +47,7 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="40dp"
-                android:text="퀴즈1문제"
+                android:text="문제"
                 android:textColor="#000000"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -99,24 +99,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/answer" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <Button
-            android:id="@+id/report"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="40dp"
-            android:background="@drawable/button_style_report"
-            android:onClick="onClick"
-            android:text="신고"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:backgroundTint="@null"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-            app:layout_constraintVertical_bias="1.0" />
 
         <Button
             android:id="@+id/exit"
