--- a/app/src/main/res/layout/quiz_multiple_form.xml
+++ b/app/src/main/res/layout/quiz_multiple_form.xml
@@ -7,19 +7,18 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2px"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="35dp"
         android:layout_marginBottom="20dp"
-        android:background="#000000" />
+        android:layout_marginHorizontal="12dp"
+        android:background="#878787" />
 
     <TextView
         android:id="@+id/quiz_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="15dp"
         android:paddingStart="20dp"
         android:paddingTop="5dp"
         android:text="문제"
@@ -29,19 +28,19 @@
     <EditText
         android:id="@+id/quiz_content_input"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/textbox"
-        android:hint="   문제를 입력하세요." />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="40dp"
+        android:background="@drawable/rounded_corner_textinput"
+        android:hint="문제를 입력하세요." />
 
     <TextView
         android:id="@+id/quiz_answer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="15dp"
         android:paddingLeft="20dp"
         android:paddingTop="5dp"
         android:text="정답"
@@ -50,68 +49,73 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/quiz_answer_input01"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-            android:background="@drawable/textbox"
-            android:hint="   1번 정답" />
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/quiz_answer_input02"
+            <EditText
+                android:id="@+id/quiz_answer_input01"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:padding="18dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_corner_textinput"
+                android:hint="   1번 정답" />
+
+            <EditText
+                android:id="@+id/quiz_answer_input02"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:padding="18dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_corner_textinput"
+                android:hint="   2번 정답" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-            android:background="@drawable/textbox"
-            android:hint="   2번 정답" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="horizontal">
+            <EditText
+                android:id="@+id/quiz_answer_input03"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:padding="18dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_corner_textinput"
+                android:hint="   3번 정답" />
 
-        <EditText
-            android:id="@+id/quiz_answer_input03"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-            android:background="@drawable/textbox"
-            android:hint="   3번 정답" />
+            <EditText
+                android:id="@+id/quiz_answer_input04"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:padding="18dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_corner_textinput"
+                android:hint="   4번 정답" />
+        </LinearLayout>
 
-        <EditText
-            android:id="@+id/quiz_answer_input04"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-            android:background="@drawable/textbox"
-            android:hint="   4번 정답" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/quiz_commentary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="15dp"
         android:paddingLeft="20dp"
         android:paddingTop="5dp"
         android:text="해설"
@@ -121,11 +125,12 @@
     <EditText
         android:id="@+id/quiz_commentary_input"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_weight="1"
-        android:background="@drawable/textbox"
-        android:hint="   해설을 입력하세요(선택)" />
+        android:background="@drawable/rounded_corner_textinput"
+        android:hint="해설을 입력하세요(선택)"
+        android:paddingHorizontal="18dp"
+        android:paddingVertical="40dp" />
 
 </LinearLayout>
