--- a/app/src/main/res/layout/quiz_ox_form.xml
+++ b/app/src/main/res/layout/quiz_ox_form.xml
@@ -7,19 +7,18 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2px"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="35dp"
         android:layout_marginBottom="20dp"
-        android:background="#000000" />
+        android:layout_marginHorizontal="12dp"
+        android:background="#878787" />
 
     <TextView
         android:id="@+id/quiz_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="15dp"
         android:paddingStart="20dp"
         android:paddingTop="5dp"
         android:text="문제"
@@ -29,78 +28,62 @@
     <EditText
         android:id="@+id/quiz_content_input"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/textbox"
-        android:hint="   문제를 입력하세요." />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="40dp"
+        android:background="@drawable/rounded_corner_textinput"
+        android:hint="문제를 입력하세요." />
 
     <TextView
         android:id="@+id/quiz_answer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="15dp"
         android:paddingLeft="20dp"
         android:paddingTop="5dp"
         android:text="정답"
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/quiz_answer_input01"
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:padding="18dp"
+        android:background="@drawable/rounded_corner_textinput"
+        android:hint="정답" />
 
-        <EditText
-            android:id="@+id/quiz_answer_input01"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/textbox"
-            android:hint="   정답" />
-
-    </LinearLayout>
 
     <TextView
         android:id="@+id/quiz_wrong"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="15dp"
         android:paddingLeft="20dp"
         android:paddingTop="5dp"
         android:text="오답"
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/quiz_answer_input02"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/quiz_answer_input02"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/textbox"
-            android:hint="   오답" />
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:padding="18dp"
+        android:background="@drawable/rounded_corner_textinput"
+        android:hint="오답" />
 
     <TextView
         android:id="@+id/quiz_commentary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="15dp"
         android:paddingLeft="20dp"
         android:paddingTop="5dp"
         android:text="해설"
@@ -111,10 +94,10 @@
         android:id="@+id/quiz_commentary_input"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/textbox"
-        android:hint="   해설을 입력하세요(선택)" />
+        android:layout_marginHorizontal="16dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="40dp"
+        android:background="@drawable/rounded_corner_textinput"
+        android:hint="해설을 입력하세요(선택)" />
 
 </LinearLayout>
