--- a/app/src/main/res/layout/quiz_single_form.xml
+++ b/app/src/main/res/layout/quiz_single_form.xml
@@ -7,19 +7,18 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2px"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="35dp"
         android:layout_marginBottom="20dp"
-        android:background="#000000" />
+        android:layout_marginHorizontal="12dp"
+        android:background="#878787" />
 
     <TextView
         android:id="@+id/quiz_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="15dp"
         android:paddingStart="20dp"
         android:paddingTop="5dp"
         android:text="문제"
@@ -29,48 +28,40 @@
     <EditText
         android:id="@+id/quiz_content_input"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/textbox"
-        android:hint="   문제를 입력하세요." />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="40dp"
+        android:background="@drawable/rounded_corner_textinput"
+        android:hint="문제를 입력하세요." />
 
     <TextView
         android:id="@+id/quiz_answer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="15dp"
         android:paddingLeft="20dp"
         android:paddingTop="5dp"
         android:text="정답"
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/quiz_answer_input"
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/quiz_answer_input"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/textbox"
-            android:hint="   정답" />
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:padding="18dp"
+        android:background="@drawable/rounded_corner_textinput"
+        android:hint="정답" />
 
     <TextView
         android:id="@+id/quiz_commentary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="15dp"
         android:paddingLeft="20dp"
         android:paddingTop="5dp"
         android:text="해설"
@@ -80,11 +71,11 @@
     <EditText
         android:id="@+id/quiz_commentary_input"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/textbox"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="40dp"
+        android:background="@drawable/rounded_corner_textinput"
         android:hint="   해설을 입력하세요(선택)" />
 
 </LinearLayout>
