--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,8 @@
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
     </style>
+
+    <style name="SpinnerTheme" parent="android:Widget.Spinner">
+        <item name="android:background">@drawable/rounded_corner_spinner</item>
+    </style>
 </resources>
