--- a/app/src/main/res/layout/activity_quiz_add.xml
+++ b/app/src/main/res/layout/activity_quiz_add.xml
@@ -14,6 +14,7 @@
         android:fillViewport="true">
 
         <LinearLayout
+            android:id="@+id/quiz_add_main_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingVertical="64dp">
