--- a/app/src/main/res/layout/quiz_multiple_form.xml
+++ b/app/src/main/res/layout/quiz_multiple_form.xml
@@ -92,10 +92,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
-                android:padding="18dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_corner_textinput"
-                android:hint="   3번 정답" />
+                android:hint="3번 정답"
+                android:padding="18dp" />
 
             <EditText
                 android:id="@+id/quiz_answer_input04"
