--- a/app/src/main/res/layout/activity_quiz_list.xml
+++ b/app/src/main/res/layout/activity_quiz_list.xml
@@ -10,17 +10,18 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:fillViewport="true">
 
         <LinearLayout
             android:id="@+id/quiz_list_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:paddingVertical="64dp"
             android:orientation="vertical">
 
             <TextView
@@ -42,8 +43,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="30dp"
-        android:onClick="onButtonClick"
-        android:backgroundTint="@color/main_color"
+        android:backgroundTint="@color/sub_color"
+        android:onClick="onClick"
         android:src="@drawable/ic_add"
         android:tint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
