--- a/app/src/main/res/layout/quiz_list_form.xml
+++ b/app/src/main/res/layout/quiz_list_form.xml
@@ -3,15 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
-    android:background="@drawable/textbox"
+    android:background="@drawable/rounded_corner_button_border"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/quiz_title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginHorizontal="10dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:text="내 퀴즈#1"
@@ -28,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:background="@drawable/textbox"
+        android:background="@drawable/rounded_corner_button"
         android:backgroundTint="#FF1CC079"
         android:onClick="onButtonClick"
         android:text="Edit" />
